<resources>
    <string name="app_name">社区统计管理e本通</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello World, UpdateActivity!</string>
    <string name="person">个人信息</string>
    <string name="appname">社区就业服务e本通</string>
    <string name="appbanquan">版权所有：静安区人力资源和社会保障局</string>
    <string name="username">账     户：</string>
    <string name="userpwd">	密     码：</string>
    <string name="login">登  陆</string>
    <string name="textCard">证件类型：</string>
    <string name="cardnum">证件号码：</string>
    <string name="btn_scan">扫描</string>
    <string name="btn_query">查询</string>
    <string name="hint_user">请输入用户名</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="tv_name">姓　　名：</string>
    <string name="tv_lexing">人员类型：</string>
    <string name="tv_register">户籍类型：</string>
    <string name="tv_wenhuan">文化程度：</string>
    <string name="tv_agelow">年龄下限：</string>
    <string name="tv_ageup">年龄上限：</string>
    <string name="tv_check">是否核实：</string>
    <string name="tv_province">省：</string>
    <string name="tv_city">市：</string>
    <string name="tv_district">区、县：</string>
    <string name="tv_street">街　　道：</string>
    <string name="tv_committees">居委会　：</string>
    <string name="tv_road">路：</string>
    <string name="tv_lane">弄：</string>
    <string name="tv_num">号：</string>
    <string name="tv_room">室：</string>
    <string name="tv_zuzhhicode">组织结构代码：</string>
    <string name="tv_hangyeleibie">行业类别：</string>
    <string name="tv_entname">企业名称：</string>
    <string name="tv_iszhaopin">是否有有效招聘信息：</string>
    <string name="tv_hangye">行　　业：</string>
    <string name="tv_jobadress">工作地点：</string>
    <string name="tv_gangwei">岗　　位：</string>
    <string name="tv_jobneirong">工作内容：</string>
    <string name="tv_jobyaoqiu">工作要求：</string>
    <string name="tv_zhineng">职　　能：</string>
    <string name="tv_leixing">类型：</string>
    <string name="tv_mingchen">名称：</string>
    <string name="tv_key">关键字：</string>
    <string name="tv_neirong">内容：</string>
    <string name="tv_datestart"> 起始时间：</string>
    <string name="tv_dateend">终止时间：</string>
    <string name="tv_rizhizhuti">日志主题：</string>
    <string name="tv_jobnum">员工编号：</string>
    <string name="tv_rizhineirong">日志内容：</string>
    <string name="btn_tijiao">提交</string>
    <string name="btn_paizhao">拍照</string>
    <string name="btn_shangchuan">上传图库文件</string>
    <string name="spinner_name">请选择</string>
    <string name="tv_reports_name">报表名称</string>
    <string name="tv_reports_note">报表备注</string>
    <string name="tv_peoplecount">目前所属街道人员统计信息</string>
    <string name="tv_nowlocation">当前位置</string>
    <string name="btn_load">查看更多</string>
    <string name="btn_loadmainactivity">进入工作菜单</string>
    <string name="quanxian">*</string>
    <string name="soft_update_no">已是最新版本</string>
    <string name="soft_update_title">版本更新</string>
    <string name="soft_update_info">有最新版本，是否更新</string>
    <string name="soft_update_updatebtn">现在更新</string>
    <string name="soft_update_later">以后更新</string>
    <string name="soft_updating">版本更新</string>
    <string name="soft_update_cancel">取消</string>
    <string-array name="spinner_policyleixingItem">
        <item>失业保险</item>
        <item>就业补贴</item>
        <item>职业介绍</item>
        <item>职业指导</item>
        <item>职业培训</item>
        <item>职业见习</item>
        <item>劳动力资源</item>
        <item>开业指导</item>
    </string-array>
    <string-array name="spinner_card">
        <item>居民身份证</item>
        <item>居民户口薄</item>
        <item>护照</item>
        <item>军官证（士兵证）</item>
        <item>驾驶执照</item>
        <item>其他</item>
    </string-array>
    <string-array name="spinner_renyuanleixing">
        <item>就业</item>
        <item>登记失业</item>
        <item>未登记失业</item>
        <item>养老</item>
        <item>死亡</item>
        <item>在校生</item>
        <item>其他</item>
    </string-array>
    <string-array name="spinner_huji">
        <item>农村户口</item>
        <item>非农村户口</item>
        <item>不详</item>
        <item>其他</item>
    </string-array>
    <string-array name="spinner_wenhua">
        <item>初中以下</item>
        <item>大学本科(简称大学)</item>
        <item>职业高中毕业</item>
        <item>农业初中毕业</item>
        <item>研究生</item>
        <item>中等专科或专业毕业</item>
        <item>专科毕业</item>
        <item>初中毕业</item>
        <item>技工学校肄业</item>
        <item>大学毕业</item>
        <item>小学毕业</item>
        <item>大学专科和专科学校</item>
        <item>研究生毕业</item>
        <item>相当专科毕业</item>
        <item>相当初中毕业</item>
        <item>研究生肄业</item>
        <item>高中毕业</item>
        <item>大学肄业</item>
        <item>中专毕业</item>
        <item>小学</item>
        <item>相当高中毕业</item>
        <item>相当小学毕业</item>
        <item>小学肄业</item>
        <item>初中肄业</item>
        <item>高中肄业</item>
        <item>高中</item>
        <item>不明</item>
        <item>相当中专或中技毕业</item>
        <item>初中</item>
        <item>中技毕业</item>
        <item>中专或中技肄业</item>
        <item>技工学校毕业</item>
        <item>相当大学毕业</item>
        <item>文盲或半文盲</item>
        <item>技工学校</item>
        <item>专科肄业</item>
        <item>职业初中毕业</item>
    </string-array>
    <string-array name="spinner_ischeck">
        <item>是</item>
        <item>否</item>
    </string-array>
    <string-array name="sppiner_shi">
        <item>市辖区</item>
        <item>县</item>
    </string-array>
    <string-array name="spinner_qiyeleibie">
        <item>计算机软件</item>
        <item>计算机硬件</item>
        <item>计算机服务（系统、数据服务、维修）</item>
        <item>通信/电信/网络设备</item>
        <item>通信/电信运营、增值服务</item>
        <item>互联网/电子商务</item>
        <item>网络游戏</item>
        <item>电子技术/半导体/集成电路</item>
        <item>仪器仪表/工业自动化</item>
        <item>会计/审计</item>
        <item>金融/投资/证券</item>
        <item>银行</item>
        <item>保险</item>
        <item>贸易/进出口</item>
        <item>批发/零售</item>
        <item> 快速消费品（食物、饮料、化妆品） </item>
        <item>服装/纺织/皮革</item>
        <item>家具/家电/工艺品/玩具/珠宝</item>
        <item>奢侈品/收藏品</item>
        <item>办公用品及设备</item>
        <item>机械/设备/重工</item>
        <item>汽车及零配件</item>
        <item>制药/生物工程</item>
        <item>医疗/护理/卫生</item>
        <item>医疗设备/器械</item>
        <item>广告</item>
        <item>公关/市场推广/会展</item>
        <item>影视/媒体艺术/文化传播</item>
        <item>文字媒体/出版</item>
        <item>印刷/包装/造纸</item>
        <item>房地产开发</item>
        <item>建筑/建材/工程</item>
        <item>家居/室内设计/装潢</item>
        <item>物业管理/商业中心</item>
        <item>中介服务</item>
        <item>专业服务（咨询、人力资源、财会）</item>
        <item>外包服务</item>
        <item>检测、认证</item>
        <item>法律</item>
        <item>教育/培训/院校</item>
        <item>学术/科研</item>
        <item>餐饮业</item>
        <item>酒店/旅游</item>
        <item>娱乐/休闲/体育</item>
        <item>美容/保健</item>
        <item>生活服务</item>
        <item>交通/运输/物流</item>
        <item>航空/航天</item>
        <item>石油/化工/矿产/地质</item>
        <item>采掘业/冶炼 </item>
        <item>电力/水利</item>
        <item>新能源</item>
        <item>原材料加工</item>
        <item>政府/公共事业</item>
        <item>非盈利机构</item>
        <item>环保</item>
        <item>农/林/牧/渔</item>
        <item>多元化业务集团</item>
        <item>其他行业</item>
    </string-array>
    <string name="education_school">学　　校：</string>
    <string name="education_xueli"> 学　　历：</string>
    <string name="education_major">专　　业：</string>
    <string name="education_majors">专业描述：</string>
    <string name="educations">海外求学：</string>
    <string name="educationbeizhu">此选项为必填项</string>
    <string name="trainname">培训机构：</string>
    <string name="zhengshu">  获得证书：</string>
    <string name="trainlesson">培训课程：</string>
    <string name="trains">详细描述：</string>
    <string name="workname">工作单位：</string>
    <string name="worknature">单位性质：</string>
    <string name="workbumen">部　　门：</string>
    <string name="workposition">职　　位：</string>
    <string name="works">工作描述：</string>
    <string name="workoversea">海外工作经历：</string>
    <string name="militarydatestart">参军日期：</string>
    <string name="militarydateend">退伍转业日期：</string>
    <string name="isshangcan">是否伤残：</string>
    <string name="militarys">兵役情况：</string>
    <string name="jobsituation">目前情况：</string>
    <string name="jobcurrentintention">当前意向：</string>
    <string name="jobtime">工作班时：</string>
    <string name="jobsalary">期望薪资：</string>
    <string name="selfdescription">自我评价：</string>
    <string name="guidesituation">指导情况：</string>
    <string name="other">其　　他：</string>
    <string name="policysituation">政策情况：</string>
    <string name="ispolicyguarantee">市级保障对象：</string>
    <string name="iscanbao">是否参保：</string>
    <string name="onechildfee">独生子女费用：</string>
    <string name="homesize">家庭面积：</string>
    <string name="baozhanghouse">保障性住房　：</string>
    <string name="add_personinfo">基本信息</string>
    <string name="add_educationinfo">教育信息</string>
    <string name="add_traininfo">培训信息</string>
    <string name="add_familyinfo">家庭情况</string>
    <string name="add_jiuyeinfo">就业信息</string>
    <string name="add_wrokinfo">工作经验</string>
    <string name="add_bingyi">兵役情况</string>
    <string name="add_currentintention">目前意向</string>
    <string name="add_policyshare">政策享受</string>
    <string name="tv_gender">性　　别：</string>
    <string name="tv_born">出生年月：</string>
    <string name="tv_national">民　　族：</string>
    <string name="tv_politicsstatus">政治面貌：</string>
    <string name="tv_maritalstatus">婚姻状况：</string>
    <string name="tv_Leveledu">文化程度：</string>
    <string name="tv_major">专       业：</string>
    <string name="tv_currentstatus">目前状况：</string>
    <string name="tv_mobilephone">手机电话：</string>
    <string name="tv_homephone">家庭电话：</string>
    <string name="tv_registerstatus">户籍状况：</string>
    <string name="tv_registeraddress">户籍地址：</string>
    <string name="tv_currentadress">居住地址：</string>
    <string name="tv_sourceinfo">信息来源：</string>
    <string name="tv_infoischeck">信息核实：</string>
    <string name="tv_man">男</string>
    <string name="tv_femal">女</string>
    <string name="btn_personshangchuan">上传</string>
    <string name="btn_personsave">保存</string>
    <string name="btn_personpreview">预览</string>
    <string name="title_activity_first_page">FirstPageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="tv_querytitle">人员 - 信息</string>
    <string name="title_activity_update_page">UpdatePageActivity</string>
    <string name="tv_modi">摸底情况：</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_web_view_activity1">WebViewActivity1</string>
    <string name="title_activity_web_view_activity2">WebViewActivity2</string>
    <string name="title_activity_web_view_activity3">WebViewActivity3</string>
    <string name="title_activity_new_main">NewMainActivity</string>
    <string name="btn_mark">标　　识：</string>
    <string name="qihang_age">年龄：</string>
    <string-array name="spinner_sex">
        <item>全部</item>
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="spinnersex">
        <item>男</item>
        <item>女</item>
        <item>不详 </item>
    </string-array>
    <string name="login_about">关于</string>
    <string name="login_aoutname">社区就业服务E本通</string>
    <string name="login_banben">软件版本:</string>
    <string name="login_aboutversion">Version　1.0</string>
    <string name="login_aboutguishu">软件归属:</string>
    <string name="login_aboutguishus">闸北就业促进中心</string>
    <string name="login_aboutgongneng">软件功能:</string>
    <string name="login_aboutgongnengs">社区人员信息实时采集处理，提高社区工作人员的办事效率。</string>
    <string name="title_activity_pend_work">PendWorkActivity</string>
    <string name="title_activity_pend_work_list">PendWorkListActivity</string>
    <string name="tv_native">籍　　贯：</string>
    <string name="tv_status">状　　态：</string>
    <string name="tv_phonenum">联系电话：</string>
    <string name="title_activity_add__pendwork">Add_PendworkActivity</string>
    <string name="title_activity_policy">MainPolicyActivity</string>
</resources>