<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="500dip"
        android:layout_height="350dip"
        android:background="@drawable/login_content_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="495dip"
            android:layout_height="40dip"
            android:layout_marginLeft="-2dip"
            android:background="@drawable/lt"
            android:paddingBottom="1.0dip"
            android:paddingLeft="1.0dip"
            android:paddingRight="1.0dip"
            android:paddingTop="1.0dip" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="7dip"
                android:text="@string/login_about"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="0dip"
                android:background="#6f999999" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/zhabeilogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_aoutname"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_banben"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_versions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_aboutversion"
                    android:layout_marginLeft="20dp"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_aboutguishu"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_belong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/login_aboutguishus"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_aboutgongneng"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tv_gongneng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/login_aboutgongnengs"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>